# docs/swagger.json
@@ -266,7 +266,7 @@
         },
         "/assets/{id}/status": {
             "patch": {
-                "description": "Update the status of an asset (pending, processing, completed, failed)",
+                "description": "Update the status of an asset (uploaded, processed, upload_failed, process_failed) and the output url",
                 "consumes": [
                     "application/json"
                 ],
@@ -276,7 +276,7 @@
                 "tags": [
                     "assets"
                 ],
-                "summary": "Update asset status",
+                "summary": "Update asset status and the output url",
                 "parameters": [
                     {
                         "type": "integer",
@@ -530,11 +530,15 @@
             "type": "string",
             "enum": [
                 "uploaded",
-                "processed"
+                "processed",
+                "process_failed",
+                "upload_failed"
             ],
             "x-enum-varnames": [
                 "AssetStatusUploaded",
-                "AssetStatusProcessed"
+                "AssetStatusProcessed",
+                "AssetStatusProcessFailed",
+                "AssetStatusUploadFailed"
             ]
         }
     }
